--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <description>clientapi</description>
     <properties>
         <java.version>17</java.version>
+        <start-class>
+            com.comp413.clientapi.api.ClientapiApplication
+        </start-class>
     </properties>
     <dependencies>
         <dependency>
