--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # app.yaml
 
 runtime: java17
-entrypoint: java -jar target/snaplink-v1.jar  # Updated JAR file name
+entrypoint: java -jar target/snaplink-1.0.0.jar  # Updated JAR file name
 service: snaplink                            # Updated service name
 
 service_account: sp25-comp539-team1-snaplink@rice-comp-539-spring-2022.iam.gserviceaccount.com
