--- a/Frontend_Vue/package.json
+++ b/Frontend_Vue/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
