--- a/Frontend_Vue/package.json
+++ b/Frontend_Vue/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
