--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,18 @@
     </parent>
 
     <properties>
+        <postmark.version>1.11.1</postmark.version>
         <java.version>17</java.version> <!-- Consistent Java version -->
         <start-class>com.snaplink.urlshortener.App</start-class> <!-- Main Application Class -->
     </properties>
+
+    <!-- Add Postmark repository -->
+    <repositories>
+        <repository>
+            <id>postmark-repo</id>
+            <url>https://repo1.maven.org/maven2/com/postmarkapp/postmark/1.11.1/</url>
+        </repository>
+    </repositories>
 
     <!-- Dependency Management -->
     <dependencyManagement>
@@ -35,7 +44,10 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
+    
     </dependencyManagement>
+
+
 
     <!-- Project Dependencies -->
     <dependencies>
@@ -43,6 +55,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <!-- Spring Boot DevTools for Hot Reload -->
@@ -69,7 +87,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-        <!-- H2 Database -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <!-- H2 Database -->    
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -93,6 +115,14 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- Add dependencies here -->
+        <dependency>
+        <groupId>com.postmarkapp</groupId>
+        <artifactId>postmark</artifactId>
+        <version>1.11.1</version>
+        </dependency>
+
+
         <!-- Google Cloud Bigtable -->
         <dependency>
             <groupId>com.google.cloud</groupId>
